# Local_Ai

./: agent.py  agent_state.json  chatgptCodexPrompt.txt  config.py  io_utils.py  main.py  orchestrator.py  pyproject.toml  schemas.py  testPrompt.txt  tools.json  tools.py  tools_manager.py
agents/: base.py  decomposer_agent.py  executor_agent.py  fix_manager_agent.py  intake_agent.py  planner_agent.py  prompter_agent.py  research_agent.py  reviewer_agent.py  summarizer_agent.py
config/: config.py
context/: context_logger.py  models.py
context_snapshots/: execution_20251212T105143907671.json  execution_20251212T105143987570.json  execution_20251212T105144070236.json  execution_20251212T105144141032.json  execution_20251212T113648147453.json  execution_20251212T113648329036.json  execution_20251212T113648462252.json  execution_20251212T113648580531.json  execution_20251212T113719918926.json  execution_20251212T113720024812.json  execution_20251212T113720117176.json  execution_20251212T113720206506.json  execution_20251212T113835185875.json  execution_20251212T113836791708.json  execution_20251212T113837638614.json  execution_20251212T113839121660.json  execution_20251212T113924602572.json  execution_20251212T113925676509.json  execution_20251212T113926596510.json  execution_20251212T113927589622.json  execution_20251212T114216760091.json  execution_20251212T114217565369.json  execution_20251212T114218335512.json  execution_20251212T114219078500.json  execution_20251212T114603322533.json  execution_20251212T114604352847.json  execution_20251212T114605158135.json  (+192 more)
(+56 files in other folders)
