[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local_ai"
version = "0.1.0"
description = "Local multi-agent orchestrator with Ollama-ready interfaces."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "typing_extensions>=4.9",
]
authors = [{name = "Local AI"}]

[project.optional-dependencies]
ui = ["PySide6>=6.7"]
dev = ["pytest>=7.4"]

[tool.pytest.ini_options]
addopts = "-q"
